test/classes/ferguson/generic-inherit-record4.good
generic-inherit-record4.chpl:13: error: inheritance is not currently supported for records
note: Thoughts on what record inheritance should entail can be added to https://github.com/chapel-lang/chapel/issues/6851.
